# Polars_TA

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench_indicators.py
docs/: api.md  concepts.md  examples.md  getting_started.md  how_to_guides.md  index.md
docs/api/: calendar.md  index.md  microstructure.md  momentum.md  namespace.md  quant.md  returns.md  trend.md  utils.md  volatility.md  volume.md
docs/stylesheets/: extra.css
examples/: generate_all_figures.py  plot_api_family_figures.py  plot_classic_indicators.py  plot_entropy.py  plot_liquidity.py  plot_new_indicators.py  plot_regime_conditional_signal.py  plot_regime_dashboard.py  plot_trend_volume.py  quickstart.py
polars_ta/: __init__.py  _internal.py  calendar.py  microstructure.py  momentum.py  namespace.py  others.py  quant.py  trend.py  utils.py  volatility.py  volume.py
src/: hidden.py  momentum.py  trend.py  utils.py  volatility.py  volume.py
tests/: test_calendar.py  test_edge_cases.py  test_indicators.py  test_microstructure.py  test_multi_asset.py  test_namespace.py  test_properties.py  test_quant.py  test_reference.py  test_regime_conditional_signal.py  test_smoke.py  test_warmup.py
tests/fixtures/: btcusdt_5m_sample.arrow
