[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-ta-lib"
version = "0.1.0"
description = "Technical Analysis library built on Polars expressions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dante-Berth" }]
keywords = ["polars", "technical-analysis", "trading", "finance", "indicators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["polars>=1.0", "numpy>=1.24"]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["polars_ta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
