[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-ta-lib"
version = "0.2.0"
description = "Technical Analysis library built on Polars expressions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dante-Berth" }]
keywords = ["polars", "technical-analysis", "trading", "finance", "indicators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["polars>=1.0", "numpy>=1.24"]

[project.optional-dependencies]
speed = ["numba>=0.59"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.22",
    "hypothesis>=6.0",
]

[tool.setuptools]
packages = ["polars_ta"]

[tool.setuptools.package-data]
polars_ta = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
